# Bitnet

./: .env.example  .gitignore  .pre-commit-config.yaml  AUDIT_REPORT.md  AlexRoudMap.md  CONTRIBUTING.md  Caddyfile  Dockerfile  Dockerfile.test  FRONTEND_HISTORY.md  PHASE8.1_HISTORY.md  PHASE8_HISTORY.md  PHASE9_HISTORY.md  README.md  README_DEPLOY.md  SECURITY.md  alembic.ini  docker-compose.yml  nikita_roadmap_updated.md  package-lock.json  package.json  problems.md  proplems.md  pyproject.toml  requirements.txt  security_audit.md  start_server.ps1
.agents/workflows/: check-error.md
.github/workflows/: ci.yml
.hypothesis/constants/: 004e722d2b39195a  006b559781a41f7f  010258c38047fd64  01802cc4261ad611  01831d6f995783ed  01ea48fbfd6c9f17  02129bd87887b7c1  0220a6e24fd589a6  028dbdace5ed2ae4  02ede9ea5a337fc4  0358cd077e7a1d94  036e0e23a5029bdc  03a0bc33c3be41ac  041b82baf95116f0  044aa4a97dd3204b  04d4d14e6a4b659f  053b93b66911eb7b  0588b64fcc0456fe  0628f2618034526e  068c9e16d4886008  06c4fd33ccda233b  06db35c44cf39495  071a705608690431  07441c0bf82215c9  07475514dc0bbadb  0799a57e5d15899f  07b8446a052edf99  07d98b311cb7eb7d  08fecaa6fc30fcf0  09482feeaa124f43  09ae28b390a241d0  0a174ab092bdf149  0a6403dce3b6e280  0a91e7a89abf2daa  0abeb6a2eeaa494b  0b08334a64a0dc37  0b1a4bdfddf6460d  0bb94850c64e8458  0bbf713aaf267494  0cfa12dfbf9e9abb  (+738 more)
alembic/: env.py
alembic/versions/: 16557111881b_initial.py  2a3b4c5d6e7f_breach_monitor_and_biometric.py
backend/: cli.py  main.py
backend/api/: dependencies.py  main.py
backend/core/: Cargo.toml  __init__.py  advanced_security.py  audit_logger.py  auth_manager.py  config.py  crypto_bridge.py  crypto_core.py  encryption_helper.py  encryption_helper_stub.py  fido2_auth.py  key_manager.py  pypy_optimization.py  secure_delete.py  secure_heap.py  security_utils.py
backend/core/src/: lib.rs
backend/database/: db_optimization.py  db_security.py  entry_service.py  models.py  schemas.py  session.py
backend/docs/: session.py
backend/features/: __init__.py  backup_manager.py  breach_monitor.py  breach_monitor_async.py  import_export.py  password_generator.py  password_history_manager.py  qr_generator.py  search_engine.py
backend/services/: __init__.py  import_export.py
backend/tests/: conftest.py  test_fido2.py  (+26 more)
data/: bitnet.db-shm  bitnet.db-wal
docs/: CONTINUOUS_IMPROVEMENT.md  FUTURE_ROADMAP.md  MAINTENANCE_PLAN.md  PROJECT_SUMMARY.md  QUARTERLY_AUDIT_PLAN.md  STRUCTURE.md  architecture.drawio  architecture.md  benchmarks_results.md  code_review_report.md  crypto_choices.md  crypto_core_spec.md  pypy_compatibility.md  threat_model.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
installer/: bitnet.nsi  bitnet.spec  build.ps1  launcher.py
(+66 files in other folders)
